# Conception-Logicielle_FASTFOODGO

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
ansible/: hosts.ini  site.yml
ansible/roles/nginx/tasks/: main.yml
ansible/roles/nginx/templates/: index.html.j2
src/fastfoodgo/: order.py  status.py
terraform/: main.tf  variables.tf
tests/: test_order.py  test_status.py
